# abhinandhs.shuttle.dev

./: Cargo.toml  README.md  Shuttle.toml  redeploy.sh  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: cron-commit.yml  deploy.yml
posts/: hello-world.md  roxide.md
src/: articles.rs  main.rs
static/: output.css  styles.css
templates/: article.html  base.html  index.html  post.html
