[package]
name = "abhinandh-s"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
askama = "0.14.0"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.55.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.46.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pulldown-cmark = "0.13"
