[package]
name = "abhinandh-s"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.5"
askama = "0.14.0"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.47.1"
tower-http = { version = "0.6.6", features = ["fs"]}
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
pulldown-cmark = "0.13"
